spring_hibernate_jpa2_apiRest/src/main/java/com/example/demo/error/LineaPedidoNotFoundException.java
package com.example.demo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.NOT_FOUND)
public class LineaPedidoNotFoundException extends RuntimeException{

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

	public LineaPedidoNotFoundException(long id) {
		super("No se puede encontrar la linea de pedido con la ID: " + id);
	}
}
